--- a/po/de.po
+++ b/po/de.po
@@ -7,7 +7,7 @@ msgstr ""
 "Project-Id-Version: setzer\n"
 "Report-Msgid-Bugs-To: https://github.com/cvfosammmm/Setzer/issues\n"
 "POT-Creation-Date: 2020-04-30 00:22+0200\n"
-"PO-Revision-Date: 2020-04-30 01:16+0200\n"
+"PO-Revision-Date: 2020-04-30 23:31+0200\n"
 "Last-Translator: Stephan Lachnit <stephanlachnit@protonmail.com>\n"
 "Language-Team: German <>\n"
 "Language: de\n"
@@ -15,7 +15,7 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1)\n"
-"X-Generator: Gtranslator 3.36.0\n"
+"X-Generator: Gtranslator 3.30.1\n"
 
 #: setzer/dialogs/about/about.py:44
 msgid "Setzer is a LaTeX editor."
@@ -203,9 +203,9 @@ msgid ""
 "also supported by the entry type @book. However, it is advisable to make use "
 "of the dedicated entry type @mvbook."
 msgstr ""
-"Ein mehrbandiges @book. Zur Abwärtskompatibilität sind mehrbandige Bücher "
-"auch unterstützt von Dokumententyp @book. Allerdings ist es empfehlenswert den "
-"dafür bestimmten Dokumententyp @mvbook zu verwenden."
+"Ein mehrbändiges @book. Zur Abwärtskompatibilität sind mehrbändige Bücher "
+"auch unterstützt von Dokumententyp @book. Allerdings ist es empfehlenswert "
+"den dafür bestimmten Dokumententyp @mvbook zu verwenden."
 
 #: setzer/dialogs/bibtex_wizard/bibtex_wizard.py:45
 msgid "Part of a Book With Its Own Title"
@@ -230,8 +230,8 @@ msgid ""
 "as a stand-alone book. A typical example are books reprinted in the "
 "collected works of an author."
 msgstr ""
-"Dieser Typ is ähnlich zu @inbook, allerdings stattdessen für Werke "
-"ursprünglich veröffentlich as selbständiges Buch. Ein typisches Beispiel "
+"Dieser Typ ist ähnlich zu @inbook, allerdings stattdessen für Werke "
+"ursprünglich veröffentlicht als selbständiges Buch. Ein typisches Beispiel "
 "sind Bücher, die in einer Sammlung eines Autors veröffentlicht werden."
 
 #: setzer/dialogs/bibtex_wizard/bibtex_wizard.py:47
@@ -250,10 +250,10 @@ msgid ""
 "alias for @inbook."
 msgstr ""
 "Ergänzendes Material in einem @book. Dieser Typ is nahe verwandt mit dem "
-"@inbook Typ. Währen @inbook hauptsächlich für einen Teil eines Buches mit "
-"einem eigenen Titel gedacht ist (z. B. ein einziges Essay in einer Sammlung "
+"@inbook Typ. Während @inbook hauptsächlich für einen Teil eines Buches mit "
+"einem eigenen Titel gedacht ist (z. B. ein einziger Essay in einer Sammlung "
 "von Essays vom selben Autor), ist dieser Typ vorgesehen für Elemente wie "
-"Vorworte, Einleitungen, Geleitworte, Nachwrote, etc., welche oft nur einen "
+"Vorworte, Einleitungen, Geleitworte, Nachworte, etc., welche oft nur einen "
 "generischen Namen haben. Stilistische Leitfäden können voraussetzen, dass "
 "solche Elemente anders als @inbook Elemente formatiert werden. Der "
 "gewöhnliche Stil wird diesen Typ wie ein Pseudonym für @inbook behandeln."
@@ -545,10 +545,10 @@ msgid ""
 "\n"
 "To configure your build system go to Preferences."
 msgstr ""
-"Der Erstellungsprozess wurde unerwarted beendet, Ausgabe: "
+"Der Erstellungsprozess wurde unerwartet beendet, Ausgabe: "
 "\"{error_message}\".\n"
 "\n"
-"Um dein Erstellungssystem zu ändern gehe in die Einstellungen."
+"Sie können das Erstellungssystem in den Einstellungen konfigurieren."
 
 #: setzer/dialogs/close_confirmation/close_confirmation.py:86
 #, python-brace-format
@@ -557,7 +557,7 @@ msgstr "Dokument »{document}« hat ungespeicherte Änderungen."
 
 #: setzer/dialogs/close_confirmation/close_confirmation.py:87
 msgid "If you close without saving, these changes will be lost."
-msgstr "Wenn du ohne zu speichern schließt gehen alle Veränderungen verloren."
+msgstr "Wenn Sie schließen ohne zu speichern, gehen alle Änderungen verloren."
 
 #: setzer/dialogs/close_confirmation/close_confirmation.py:90
 #, python-brace-format
@@ -566,22 +566,22 @@ msgid ""
 "Save changes before closing?"
 msgstr ""
 "Es gibt {amount} Dokumente mit ungespeicherten Änderungen.\n"
-"Änderungen vorm Schließen speichern?"
+"Änderungen vor dem Schließen speichern?"
 
 #: setzer/dialogs/close_confirmation/close_confirmation.py:91
 msgid "Select the documents you want to save:"
-msgstr "Wähle die Dokumente aus die du speichern willst:"
+msgstr "Wählen Sie die Dokumente aus die Sie speichern wollen:"
 
 #: setzer/dialogs/close_confirmation/close_confirmation.py:113
 msgid "If you close without saving, all changes will be lost."
 msgstr ""
-"Wenn du die Datei ohne zu speichern schließt gehen alle ungespeicherten "
-"Veränderungen verloren."
+"Wenn Sie die Datei schließen ohne zu speichern, gehen alle ungespeicherten "
+"Änderungen verloren."
 
 #: setzer/dialogs/document_changed_on_disk/document_changed_on_disk.py:49
 #, python-brace-format
 msgid "Document »{document}« has changed on disk."
-msgstr "Dokument »{document}« hat sich im Speicher geändert."
+msgstr "Dokument »{document}« wurde auf der Festplatte geändert."
 
 #: setzer/dialogs/document_changed_on_disk/document_changed_on_disk.py:50
 msgid "Should Setzer reload it now?"
@@ -831,7 +831,7 @@ msgstr ""
 "Setzer ist konfiguriert »{interpreter}« zu verwenden, welches nicht auf dem "
 "System vorhanden zu sein scheint.\n"
 "\n"
-"Ein anderer LaTeX Interpreter lässt sich in den Einstellungen auswählen.\n"
+"Ein anderer LaTeX-Interpreter lässt sich in den Einstellungen auswählen.\n"
 "\n"
 "Hilfe zur Installation von LaTeX gibt es auf <a href=\"https://de.wikibooks."
 "org/wiki/LaTeX/_Installation\">https://de.wikibooks.org/wiki/LaTeX/"
@@ -1134,7 +1134,7 @@ msgstr "Übereinstimmende Klammern hervorheben"
 
 #: setzer/dialogs/preferences/preferences_viewgtk.py:133
 msgid "LaTeX Interpreter"
-msgstr "LaTeX Interpreter"
+msgstr "LaTeX-Interpreter"
 
 #: setzer/dialogs/preferences/preferences_viewgtk.py:155
 msgid ""
@@ -1343,7 +1343,7 @@ msgstr "Erstellung abbrechen"
 
 #: setzer/document/build_widget/build_widget_viewgtk.py:45
 msgid "Cleanup build files"
-msgstr "Hilfdateien entfernen"
+msgstr "Hilfsdateien entfernen"
 
 #: setzer/document/preview/zoom_widget/zoom_widget_viewgtk.py:54
 msgid "Set zoom level"
@@ -1813,7 +1813,7 @@ msgstr "Fußnote"
 
 #: setzer/workspace/shortcutsbar/shortcutsbar_viewgtk.py:194
 msgid "Underline"
-msgstr "Unterstreichen"
+msgstr "Unterstrichen"
 
 #: setzer/workspace/shortcutsbar/shortcutsbar_viewgtk.py:194
 #: setzer/workspace/shortcutsbar/shortcutsbar_viewgtk.py:363
@@ -1835,7 +1835,7 @@ msgstr ""
 
 #: setzer/workspace/shortcutsbar/shortcutsbar_viewgtk.py:194
 msgid "Emphasis"
-msgstr ""
+msgstr "Hervorgehoben"
 
 #: setzer/workspace/shortcutsbar/shortcutsbar_viewgtk.py:213
 msgid "Centered"
@@ -2126,7 +2126,7 @@ msgstr "Hilfreiche Fehlermeldungen"
 
 #: data/org.cvfosammmm.Setzer.appdata.xml.in:19
 msgid "Looks great on the Gnome desktop"
-msgstr "Sieht gut in Gnome aus"
+msgstr "Sieht gut aus auf dem Gnome-Desktop"
 
 #: data/org.cvfosammmm.Setzer.appdata.xml.in:20
 msgid "Good screen to content ratio"
@@ -2134,7 +2134,7 @@ msgstr "Gutes Verhältnis von Fenstergröße zu Inhalt"
 
 #: data/org.cvfosammmm.Setzer.appdata.xml.in:21
 msgid "Arguably the best .pdf viewer of any LaTeX editor"
-msgstr "Wohl der beste .pdf Betrachter von allen LaTeX Editoren"
+msgstr "Der vielleicht beste .pdf-Betrachter von allen LaTeX Editoren"
 
 #: data/org.cvfosammmm.Setzer.appdata.xml.in:34
 msgid "Document creation wizard"
